classDiagram
    AuthService --> User
    AuthService --> CurrentUserContext : 登录后生成请求上下文
    AuthService --> NotificationService : 注册欢迎通知

    UserService --> User
    UserService --> FileStorageService : 通过fileId读取头像

    VerificationReviewService --> VerificationReview
    VerificationReviewService --> UserService : 提交/回写认证状态、读取实名信息
    VerificationReviewService --> FileStorageService : 保存/读取认证材料
    VerificationReviewService --> PointService : 认证通过赠送积分
    VerificationReviewService --> NotificationService : 认证结果通知

    PickupService --> PickupRequest
    PickupService --> UserService : 获取认证状态/公开摘要
    PickupService --> PointService : 发布扣减/取消退回/完成转移
    PickupService --> FileStorageService : 取件凭证/完成凭证
    PickupService --> NotificationService : 接单/凭证/完成通知
    FileStorageService --> StoredFile : 维护文件元数据和上传溯源

    PointService --> UserService : 读取/条件更新积分余额与签到日期
    PointService --> PointTransaction : 写入积分流水

    EvaluationService --> Evaluation
    EvaluationService --> PickupService : 查询评价上下文
    EvaluationService --> UserService : 公开摘要
    EvaluationService --> NotificationService : 收到评价通知

    NotificationService --> NotificationRecord

    class AuthService {
        +register(username, rawPassword)
        +login(username, rawPassword)
    }

    class UserService {
        +getCurrentUser(userId)
        +getPublicProfile(userId)
        +getUserBriefs(userIds)
        +loadAvatar(userId)
        +updateProfile(userId, nickname, avatar, college, contact)
        +isStudentIdCertified(studentId, excludeUserId)
        +markVerificationSubmitted(userId)
        +markVerificationApproved(userId, studentId, realName)
        +markVerificationRejected(userId)
        +ensureCertified(userId)
        +getPointBalance(userId)
        +applyPointChange(userId, delta, checkInDate)
    }

    class VerificationReviewService {
        +submitVerification(userId, studentId, realName, verificationImage)
        +queryReviews(admin, status, pageQuery)
        +handleReview(admin, reviewId, request)
        +loadReviewImage(admin, reviewId)
    }

    class PickupService {
        +publishPickup(currentUserId, request, pickupCredential)
        +queryHall(campus, rewardType, pageQuery)
        +queryDetail(pickupId)
        +loadPickupCredential(pickupId, currentUserId)
        +acceptPickup(pickupId, currentUserId)
        +uploadCompletionProof(pickupId, currentUserId, proofImage)
        +loadCompletionProof(pickupId, currentUserId)
        +confirmComplete(pickupId, currentUserId)
        +cancelPickup(pickupId, currentUserId, cancelDetail)
        +queryMyPublished(currentUserId, status, pageQuery)
        +queryMyAccepted(currentUserId, status, pageQuery)
        +queryPickupEvaluationContext(pickupId)
    }

    class PointService {
        +grantInitialPoints(userId)
        +checkIn(userId)
        +getBalance(userId)
        +spendForPublish(userId, amount, pickupId)
        +refundForCancel(userId, amount, pickupId)
        +transferOnComplete(payerId, receiverId, amount, pickupId)
        +queryTransactions(userId, type, pageQuery)
    }

    class FileStorageService {
        +uploadImage(file, uploaderId, fileUsage, businessType, businessId)
        +loadFile(fileId)
        +updateBusinessTrace(fileId, businessType, businessId)
    }

    class EvaluationService {
        +queryEvaluationEligibility(pickupId, currentUserId)
        +submitEvaluation(pickupId, currentUserId, request)
        +queryUserRatingSummary(userId)
        +queryUserEvaluations(userId, pageQuery)
        +queryReceivedEvaluation(pickupId, currentUserId)
        +queryPickupEvaluations(pickupId, currentUserId)
    }

    class NotificationService {
        +createNotice(receiverId, type, title, content, businessType, businessId)
        +queryMyNotices(userId, pageQuery)
        +countUnread(userId)
        +markRead(notificationId, userId)
    }
